--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,67 @@
 html{
   background-color: whitesmoke;
 }
+header{
+  background-color: grey;
+  margin: -15px;
+  margin-top: -175px;
+  margin-right: -5%;
+  padding: 1%;
+  padding-top: 20px;
+  padding-bottom: 10px;
+  width: 100%;
+  text-align: center;
+  color: white;
+  position: fixed;
+}
+nav {
+  width: 100%;
+  height: 2%;
+  z-index: 99;
+  top: 0;
+  margin-top: 60px;
+  margin-left: 0%;
+  padding-left: 2%;
+  padding-top: 5%;
+  position: fixed;
+}
+nav ul {
+  display: flex;
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  margin: 0;
+  margin-left: -5%;
+  padding: 0;
+  list-style: none;
+}
+nav li {
+    width: 100%;
+    box-sizing: border-box;
+    margin: 0 auto;
+    background-color: black;
+    border-bottom: solid 1px white;
+    padding: 1em;
+    padding-top: 15px;
+    padding-bottom: 5px;
+}
+nav ul a {
+    text-align: center;
+    color: white;
+}
+a {
+    text-decoration: none;
+    color: lightblue;
+}
+main{
+  margin: 10%;
+  margin-top: 175px;
+  padding: 2.5%;
+  padding-top:2.5px;
+  padding-bottom: 5px;
+  background-color: red;
+}
+h2{
+  text-align: center;
+  
+}
