--- a/css/index.css
+++ b/css/index.css
@@ -62,12 +62,13 @@ a:hover{
 main{
   background-color: bisque;
   border: 5px double burlywood;
-  margin: 10%;
+  margin: 2%;
   margin-top: 175px;
+  margin-bottom: 350px;
   padding: 2.5%;
   padding-top:2.5px;
   padding-bottom: 10px;
-  font-family: 'Marck Script', cursive;
+  font-family: 'Shadows Into Light', cursive;
   font-style: italic;
 }
 h2{
