--- a/css/bash.css
+++ b/css/bash.css
@@ -1,5 +1,5 @@
 html{
-  background-color: whitesmoke;
+  background-color: lightpink;
   font-family: helvetica;
 }
 header{
@@ -60,17 +60,16 @@ a:hover{
 
 }
 main{
-  background-color: rgba(50,50,50,0.5);
-  border: 5px solid rgba(50,50,50,0.5);
+  background-color: bisque;
+  border: 5px double burlywood;
   margin: 2%;
   margin-top: 175px;
   margin-bottom: 350px;
   padding: 2.5%;
   padding-top:2.5px;
   padding-bottom: 10px;
-  font-family: helvetica;
+  font-family: 'Shadows Into Light', cursive;
   font-style: italic;
-  color: white;
 }
 h2{
   text-align: center;
