--- a/css/index.css
+++ b/css/index.css
@@ -60,17 +60,17 @@ a:hover{
 
 }
 main{
-  background-color: rgba(50,50,50,0.5);
-  border: 5px solid rgba(50,50,50,0.5);
+  background-color: rgba(50,50,50,0.25);
+  border: 5px solid rgba(50,50,50,0.25);
   margin: 2%;
   margin-top: 175px;
-  margin-bottom: 350px;
+  margin-bottom: 45%;
   padding: 2.5%;
   padding-top:2.5px;
   padding-bottom: 10px;
   font-family: helvetica;
-  font-style: italic;
-  color: white;
+  color: hotpink;
+  font-weight: bold;
 }
 h2{
   text-align: center;
