updated colors got rid of background box on index

--- a/css/index.css
+++ b/css/index.css
@@ -60,8 +60,8 @@ a:hover{
 
 }
 main{
-  background-color: rgba(50,50,50,0.25);
-  border: 5px solid rgba(50,50,50,0.25);
+  /* background-color: rgba(50,50,50,0.25);
+  border: 5px solid rgba(50,50,50,0.25); */
   margin: 2%;
   margin-top: 175px;
   margin-bottom: 45%;
@@ -69,12 +69,12 @@ main{
   padding-top:2.5px;
   padding-bottom: 10px;
   font-family: helvetica;
-  color: hotpink;
+  color: mediumvioletred;
   font-weight: bold;
 }
 h2{
   text-align: center;
-
+  text-shadow: 1px 1px black;
 }
 p{
   text-indent: 50px;
