--- a/css/bash.css
+++ b/css/bash.css
@@ -3,13 +3,13 @@ html{
   font-family: helvetica;
 }
 header{
-  background-color: steelblue;
+  background-color: maroon;
   margin: -15px;
   margin-top: -175px;
   margin-right: -5%;
   padding: 1%;
-  padding-top: 20px;
-  padding-bottom: 10px;
+  padding-top: 10px;
+  padding-bottom: 0px;
   width: 100%;
   text-align: center;
   color: white;
@@ -18,14 +18,13 @@ header{
 }
 nav {
   width: 100%;
-  height: 2%;
   z-index: 99;
   top: 0;
-  margin-top: 60px;
-  margin-left: 0%;
+  margin-top: -15px;
+  margin-left: -3%;
   padding-left: 2%;
   padding-top: 5%;
-  position: fixed;
+  position: relative;
 }
 nav ul {
   display: flex;
