--- a/css/index.css
+++ b/css/index.css
@@ -8,8 +8,8 @@ header{
   margin-top: -175px;
   margin-right: -5%;
   padding: 1%;
-  padding-top: 20px;
-  padding-bottom: 10px;
+  padding-top: 10px;
+  padding-bottom: 0px;
   width: 100%;
   text-align: center;
   color: white;
@@ -18,14 +18,13 @@ header{
 }
 nav {
   width: 100%;
-  height: 2%;
   z-index: 99;
   top: 0;
-  margin-top: 60px;
-  margin-left: 0%;
+  margin-top: -15px;
+  margin-left: -3%;
   padding-left: 2%;
   padding-top: 5%;
-  position: fixed;
+  position: relative;
 }
 nav ul {
   display: flex;
@@ -33,7 +32,7 @@ nav ul {
   position: absolute;
   width: 100%;
   margin: 0;
-  margin-left: -5%;
+  margin-left: 0%;
   padding: 0;
   list-style: none;
 }
