--- a/css/bash.css
+++ b/css/bash.css
@@ -3,23 +3,9 @@ html{
   font-family: helvetica;
 }
 header{
-  background-color: maroon;
+  background-color: cornflowerblue;
   margin: -15px;
-  margin-top: -175px;
-  margin-right: -5%;
-  padding: 1%;
-  padding-top: 10px;
-  padding-bottom: 0px;
-  width: 100%;
-  text-align: center;
-  color: white;
-  position: fixed;
-  text-shadow: 2px 2px black;
-}
-header{
-  background-color: maroon;
-  margin: -15px;
-  margin-top: -175px;
+  margin-top: -250px;
   margin-right: -5%;
   padding: 1%;
   padding-top: 10px;
@@ -76,7 +62,7 @@ main{
   background-color: bisque;
   border: 5px double burlywood;
   margin: 2%;
-  margin-top: 175px;
+  margin-top: 250px;
   margin-bottom: 350px;
   padding: 2.5%;
   padding-top:2.5px;
