--- a/css/bash.css
+++ b/css/bash.css
@@ -59,16 +59,19 @@ a:hover{
 
 }
 main{
-  background-color: bisque;
-  border: 5px double burlywood;
   margin: 2%;
   margin-top: 250px;
   margin-bottom: 350px;
+  font-family: 'Shadows Into Light', cursive;
+  font-style: italic;
+}
+.letter{
+  background-color: bisque;
+  border: 5px double burlywood;
   padding: 2.5%;
   padding-top:2.5px;
   padding-bottom: 10px;
-  font-family: 'Shadows Into Light', cursive;
-  font-style: italic;
+  margin-bottom: 20px;
 }
 h2{
   text-align: center;
@@ -78,5 +81,34 @@ p{
   text-indent: 50px;
 }
 footer{
+  color: whitesmoke;
+}
+.key-word{
+  text-decoration: underline;
+  color: blue;
+  font-weight: bold;
+  transition: 0.5s ease;
+}
+.key-word:hover{
+  transition: 0.25s ease;
+  font-size:1.2em;
+}
+aside{
+  font-family: helvetica;
+  font-style: normal;
+  background-color: rgb(100,100,100);
+  padding: 2.5%;
+  padding-top:2.5px;
+  padding-bottom: 10px;
+}
+aside h3{
+  text-align: center;
+  font-weight: bold;
+}
+aside p br{
+  text-indent: 50px;
+}
+aside .key-word{
+  padding-right: 10px;
   color: whitesmoke;
 }
