--- a/css/github.css
+++ b/css/github.css
@@ -93,6 +93,15 @@ main{
 .par5{
   margin-left: 150px;
 }
+span{
+  text-decoration: underline;
+  font-weight: bold;
+  transition: 0.5s ease;
+}
+span:hover{
+  transition: 0.25s ease;
+  font-size:1.5em;
+}
 /* aside  */
 aside{
   font-family: helvetica;
