--- a/css/git.css
+++ b/css/git.css
@@ -9,7 +9,7 @@ header{
   background-repeat: no-repeat;
   background-size: 100% 100%;
   margin-left: -15px;
-  margin-top: -200px;
+  margin-top: -220px;
   margin-right: -5%;
   padding: 1%;
   padding-top: 50px;
@@ -67,7 +67,7 @@ main{
   background-repeat: no-repeat;
   background-size: 100% 100%;
   margin: 2%;
-  margin-top: 190px;
+  margin-top: 210px;
   margin-left: -1%;
   margin-right: -1%;
   padding: 2.5%;
@@ -82,6 +82,7 @@ main{
   padding: 5%;
   padding-top: 10px;
   padding-bottom: 10px;
+  margin-top: 10px;
   margin-bottom: 10px;
   border-radius: 25px;
   margin-right: 10px;
@@ -89,7 +90,7 @@ main{
 .key-word{
   text-decoration: underline;
   color: crimson;
-  background-color: pink;
+  background-color: rgba(255,192,203,0.5);
   padding: 0.5%;
   font-weight: bold;
   transition: 0.5s ease;
