--- a/css/bash.css
+++ b/css/bash.css
@@ -4,6 +4,7 @@ html{
   background-size: 100% 100%;
   background-position: center;
   background-repeat: no-repeat;
+  background-attachment: fixed;
   font-family: helvetica;
 }
 header{
