--- a/css/git.css
+++ b/css/git.css
@@ -1,3 +1,4 @@
+
 html{
   background-color: rgb(170,126,137);
   font-family: helvetica;
@@ -12,7 +13,7 @@ header{
   background-color: maroon;
   background-image: url(../img/love-blocks.gif);
   background-repeat: no-repeat;
-  background-size: 100% 100%;
+  background-size: cover;
   margin-left: -15px;
   margin-top: -220px;
   margin-right: -5%;
