added portfolio link

--- a/css/bash.css
+++ b/css/bash.css
@@ -78,9 +78,12 @@ nav ul a {
 }
 a:hover{
   transition: 0.25s ease;
-  color: slateblue;
+  color: rgb(50,200,200);
   font-size:2.5em;
   text-decoration: underline;
+  background-color: rgba(0,150,200,0.75);
+  border-radius: 10px;
+  padding: 5%;
 
 }
 main{
@@ -111,7 +114,7 @@ footer{
 }
 .key-word{
   text-decoration: underline;
-  color: blue;
+  color: rgb(0,150,200);
   font-weight: bold;
   transition: 0.5s ease;
 }
@@ -133,8 +136,4 @@ aside{
 aside h3{
   text-align: center;
   font-weight: bold;
-}
-aside .key-word{
-  /* padding-right: 10px; */
-  color: whitesmoke;
 }
